# couchbase-mobile-tools

./: .gitignore  .gitmodules  ArgumentTokenizer.cc  ArgumentTokenizer.hh  BUILDING.md  CMakeLists.txt  Documentation.md  LiteCoreTool.cc  LiteCoreTool.hh  README.cbl-log.md  README.cblite.md  README.md  Tool.cc  Tool.hh  appveyor.yml  build.ps1  build.py  build.sh  ci-build.ps1  ci-build.sh  config.h.in  requirements.txt
.github/workflows/: build.yml  check_deps.yml
LargeDatasetGenerator/: LargeDatasetGenerator.sln  README.md  README_generator.md  README_output.md
LargeDatasetGenerator/LargeDatasetGenerator/: LargeDatasetGenerator.csproj  Program.cs  Program_args.cs  example.json
LargeDatasetGenerator/LargeDatasetGenerator.Abstractions/: IDataGenerator.cs  IJsonOutput.cs  LargeDatasetGenerator.Abstractions.csproj
LargeDatasetGenerator/LargeDatasetGenerator.Core/: LargeDatasetGenerator.Core.csproj  LargeDatasetGenerator.cs  PositionalConsole.cs
LargeDatasetGenerator/LargeDatasetGenerator.Core/Data/: LoremIpsum.cs
LargeDatasetGenerator/LargeDatasetGenerator.Core/Generator/: BoolGenerator.cs  DataGenerator.cs  DateGenerator.cs  DateObjectArgs.cs  Extensions.cs  FloatingGenerator.cs  GaussGenerator.cs  GeneratorArgumentParser.cs  GuidGenerator.cs  IntegerGenerator.cs  LoremGenerator.cs  PluginLoader.cs  RandomGenerator.cs  RangeGenerator.cs  RepeatGeneratorArgs.cs  ThreadSafeRandom.cs
LargeDatasetGenerator/LargeDatasetGenerator.Core/Outputs/: JsonFileOutput.cs
LargeDatasetGenerator/LargeDatasetGenerator.CouchbaseLite/: CouchbaseLiteOutput.cs  LargeDatasetGenerator.CouchbaseLite.csproj
LargeDatasetGenerator/LargeDatasetGenerator.CouchbaseServer/: CouchbaseServerOutput.cs  LargeDatasetGenerator.CouchbaseServer.csproj  UrlValidation.cs
LargeDatasetGenerator/LargeDatasetGenerator.SyncGateway/: LargeDatasetGenerator.SyncGateway.csproj  SyncGatewayOutput.cs  UrlValidation.cs
LargeDatasetGenerator/images/: relationship.puml
LogMergeTool/: LogMergeTool.sln  README.md
LogMergeTool/Couchbase.Lite.Binary.Log/: Couchbase.Lite.Binary.Log.csproj  LogArgument.cs  LogLevel.cs  LogLine.cs  LogLineCollection.cs  TokenString.cs
LogMergeTool/Couchbase.Lite.Binary.Log/Decoders/: BaseDecoder.cs  ILogDecoder.cs  LogDecoder.cs  V1LogDecoder.cs
LogMergeTool/Couchbase.Lite.Binary.Log/Encoders/: BaseEncoder.cs  ILogEncoder.cs  LogEncoder.cs  V1LogEncoder.cs
LogMergeTool/LogMergeTool/: AdvancedConfig.cs  ILogOutput.cs  LogMergeTool.csproj  Program.cs  Program_args.cs
LogMergeTool/LogMergeTool/Inputs/: BinaryLogLineEnumerator.cs  (+3 more)
NugetValidator/: NugetValidator.sln
NugetValidator/NugetValidator/: NugetValidator.csproj  NugetValidator.sln  Program.cs  run.ps1
RetentionUpdater/: RetentionUpdater.sln  RetentionUpdater.sln.DotSettings
RetentionUpdater/RetentionUpdater/: AddRCCommand.cs  NewVersionCommand.cs  Program.cs  RetentionUpdater.csproj
Xcode/: n1ql_to_json.exp
Xcode/LiteServ/: LiteServ.cc
Xcode/Tools.xcodeproj/: project.pbxproj
Xcode/cblite.xcodeproj/: project.pbxproj
Xcode/cbremote/: CBRemoteCommand.cc  CBRemoteCommand.hh  CBRemoteTool.cc  CBRemoteTool.hh  RemoteCatCommand.cc  RemoteListCommand.cc  RemoteOpenCommand.cc  RemoteQueryCommand.cc
Xcode/xcconfigs/: Project.xcconfig  Project_Debug.xcconfig  Project_Debug_EE.xcconfig  Project_Release.xcconfig  Project_Release_EE.xcconfig  cbl-log.xcconfig  cblite.xcconfig  linenoise.xcconfig  liteserv.xcconfig  n1ql-to-json release.xcconfig  n1ql-to-json static.xcconfig  n1ql-to-json.xcconfig  n1ql2json.xcconfig  tests.xcconfig
cbl-log/: CMakeLists.txt  LogDecoder_stub.cpp  cbl-log.cc
cbl_logcat/: cbl_logcat.cc
cblite/: CBLiteCommand.cc  CBLiteCommand.hh  CBLiteTool.cc  CBLiteTool.hh  CMakeLists.txt  CatCommand.cc  CdCommand.cc  CheckCommand.cc  CompactCommand.cc  CpCommand.cc  DocBranchIterator.hh  EditCommand.cc  EncryptCommand.cc  EnrichCommand.cc  EnrichCommand.cpp  EnrichCommand.hh  EnrichCommand.hpp  InfoCommand.cc  ListCommand.cc  ListCommand.hh  LiteCorePolyfill.hh  LogcatCommand.cc  MkCollCommand.cc  MkIndexCommand.cc  MvCommand.cc  OpenCommand.cc  PutCommand.cc  QueryCommand.cc  QueryResultWriter.hh  ReindexCommand.cc  RevsCommand.cc  RmIndexCommand.cc  SQLCommand.cc  ServeCommand.cc  build.sh  cblite.def  cbliteTool+cat.cc  cbliteTool+compact.cc  cbliteTool+cp.cc  cbliteTool+encrypt.cc  (+10 more)
cblite/liteserv/: LiteServ.cc  example_config.json
cblite/llm/: Bedrock.cc  Bedrock.hh  Gemini.cc  Gemini.hh  LLMProvider.cc  LLMProvider.hh  Model.cc  Model.hh  OpenAI.cc  OpenAI.hh
cbremote/: CBRemoteCommand.cc  CBRemoteCommand.hh  CBRemoteTool.cc  CBRemoteTool.hh  CMakeLists.txt  RemoteListCommand.cc  RemoteOpenCommand.cc  RemotePutCommand.cc  RemoteQueryCommand.cc  RemoteQueryResultWriter.hh  build.sh
ci/: build.ps1  build.sh
ci/cbl-log/: CMakeLists.txt  ci-build.ps1  ci-build.sh
ci/cblite/: CMakeLists.txt  ci-build.ps1  ci-build.sh
cmake/: cbl-log.cmake  cbl-logtest.cmake  cblite.cmake  cblitetest.cmake  common_setup.cmake
dotnet_testing_env/: prepare_dotnet.psm1  prepare_dotnet.sh  prepare_dotnet_android.sh  prepare_dotnet_ios.sh  prepare_dotnet_new.sh
gen_defaults/: README.md  c.py  cbl-defaults.json  csharp.py  defs.py  gen_defaults.py  java.py  objc.py  swift.py
gen_errors/: .gitignore  README.md  android.py  cbl-errors.json  csharp.py  gen_errors.py  java.py  objc.py
kotlin-checks/: build.gradle  checkstyle.sh  config.xml  settings.gradle
kotlin-checks/lib/: build.gradle
litecp/: DBEndpoint.cc  DBEndpoint.hh  DirEndpoint.cc  DirEndpoint.hh  Endpoint.cc  Endpoint.hh  JSONEndpoint.cc  JSONEndpoint.hh  RemoteEndpoint.cc  RemoteEndpoint.hh
misc/: cbllog_files.txt  cloc_cbllog.txt
n1ql-to-json/: Any.h  CMakeLists.txt  N1QL.g4  N1QLTranslator.hh  empty.cpp  leg  n1ql.cc  n1ql.leg  n1ql.packcc  n1ql2json.cc  n1ql2json.hh  n1ql_parser.c  n1ql_parser.h  n1ql_parser.hh  n1ql_parser_internal.hh  n1ql_to_json.cc  n1ql_to_json.h
tests/: N1QLParserTests.cc  TokenizerTest.cc  tests_main.cc
tool_support/: ArgumentTokenizer.hh  CMakeLists.txt  LiteCoreTool.cc  LiteCoreTool.hh  Tool.cc  Tool.hh
(+21 files in other folders)
